# dmo-311-quality

./: .gitignore  CLAUDE.md  README.md  TASKS.md  pyproject.toml
.github/agents/: pipeline-qa.agent.md
data/raw/5-yr-ACS-2023/CityCouncilDistrict/Demographic/: Dem_1923_CCD.xlsx
data/raw/5-yr-ACS-2023/CityCouncilDistrict/Economic/: Econ_1923_CCD.xlsx
data/raw/5-yr-ACS-2023/CityCouncilDistrict/Housing/: Hous_1923_CCD.xlsx
data/raw/5-yr-ACS-2023/CityCouncilDistrict/Social/: Soc_1923_CCD.xlsx
data/raw/5-yr-ACS-2023/CommunityDistrict-PUMA/Demographic/: Dem_1923_CDTA.xlsx
data/raw/5-yr-ACS-2023/CommunityDistrict-PUMA/Economic/: Econ_1923_CDTA.xlsx
data/raw/5-yr-ACS-2023/CommunityDistrict-PUMA/Housing/: Hous_1923_CDTA.xlsx
data/raw/5-yr-ACS-2023/NYC-Borough/: dcp-lang-spk-at-home-nyc-boro_2023acs5yr-PUMS.xlsx  dcp-top-LEP-lang-spk-at-home-nyc-boro_2023acs5yr-PUMS.xlsx
output/reports/: correlation_sr_income.csv  correlation_sr_income_all.csv  correlation_sr_income_potholes.csv  correlation_sr_income_rodents.csv  correlation_sr_language_all.csv  correlation_sr_language_potholes.csv  correlation_sr_language_rodents.csv
src/dmo_311_quality/: __init__.py  main.py
src/dmo_311_quality/analyze/: correlations.py  run_analyze.py
src/dmo_311_quality/extract/: get_311.py  get_acs.py  get_geo.py  get_geo_week_count.py  run_extract.py
src/dmo_311_quality/transform/: merge_311_acs.py  run_transform.py
src/dmo_311_quality/utils/: config_paths.py
src/dmo_311_quality/visualize/: choropleth.py  scatter.py
(+8 files in other folders)
