[project]
name = "dmo-311-quality"
version = "0.1.0"
description = "How representative is 311 data?"
readme = "README.md"
authors = [
    { name = "tara-sullivan", email = "tasullivan@oti.nyc.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2026.3.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sodapy>=2.2.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
]

[project.scripts]
dmo-311-quality = "dmo_311_quality:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
